--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 driverClasss=com.mysql.jdbc.Driver
-jdbcUrl=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-username=root
+jdbcUrl=jdbc:mysql://192.168.31.65:3306/blog?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+username=jiyang
 password=123
 
 
