--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 driverClasss=com.mysql.jdbc.Driver
-jdbcUrl=jdbc:mysql://127.0.0.1:3306/blog?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbcUrl=jdbc:mysql://localhost:3306/blog?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 username=root
-password=123456
+password=123
 
 
 initialSize=0
